tests/cases/vectors/errors/vector-function-return-runtime-abi.ari
fn make_values() -> Vec[i64] {
  return [1, 2, 3];
}

fn main() -> i64 {
  let values = make_values();
  return len(values);
}
